force-app/main/default/objects/ob1__Output_Template__c/fields/ob1__Attachment_Message__c.field-meta.xml
<CustomField>
    <fullName>ob1__Attachment_Message__c</fullName>
    <defaultValue>&quot;Your report is attached.&quot;</defaultValue>
    <description>What message to include in the body of the email, when the report is being sent as an attachment.</description>
    <inlineHelpText>What message to include in the body of the email, when the report is being sent as an attachment.</inlineHelpText>
    <label>Attachment Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>