force-app/main/default/objects/ob1__Output_Template__c/fields/ob1__Automation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ob1__Automation_Criteria__c</fullName>
    <description>Stores the criteria used when using automated reporting.</description>
    <inlineHelpText>Used with automated reporting; any valid &apos;where clause&apos; construction for a soql query can be used.  See the salesforce.com documentation on soql.  Do not included the key word &quot;WHERE&quot;</inlineHelpText>
    <label>Automation Criteria</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>