force-app/main/default/objects/ob1__Output_Template__c/fields/ob1__Keep_History__c.field-meta.xml
<CustomField>
    <fullName>ob1__Keep_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keep History</label>
    <type>Checkbox</type>
</CustomField>