force-app/main/default/objects/ob1__Output_Template__c/fields/ob1__Require_Approval_To_Send__c.field-meta.xml
<CustomField>
    <fullName>ob1__Require_Approval_To_Send__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should an approval process be required to send this report.
If so, you must implement some approval process on Output_History&apos;s Approved field</description>
    <inlineHelpText>Should an approval process be required to send this report.</inlineHelpText>
    <label>Require Approval To Send</label>
    <type>Checkbox</type>
</CustomField>