force-app/main/default/objects/ob1__Output_Template__c/fields/ob1__Save_Only__c.field-meta.xml
<CustomField>
    <fullName>ob1__Save_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all email related functionality will be disabled for this template.</description>
    <inlineHelpText>If checked, all email related functionality will be disabled for this template.</inlineHelpText>
    <label>Save Only</label>
    <type>Checkbox</type>
</CustomField>