force-app/main/default/objects/ob1__Output_Template__c/fields/ob1__Subject__c.field-meta.xml
<CustomField>
    <fullName>ob1__Subject__c</fullName>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>